chore: add DateProvider and update files

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ POSTGRES_PASSWORD=271219
 POSTGRES_DB=fastifydb
 POSTGRES_SERVICE=postgres
 POSTGRES_PORT=5432
-
+NODE_ENV = fastifydb_test
 JWT_SECRET= ''
