--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -p tsconfig.json",
     "start": "nodemon server.ts",
     "find-deadcode": "ts-prune",
-    "test": "jest",
+    "test": " set NODE_ENV=test&&jest ",
     "seed": "ts-node-dev tsconfig-paths/register src/seed"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^29.2.5",
     "@types/jsonwebtoken": "^9.0.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
@@ -33,7 +34,6 @@
     "fastify-plugin": "^4.3.0",
     "fastify-prettier": "^2.0.0",
     "fastify-zod": "^1.2.0",
-    "jest": "^29.3.1",
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
@@ -46,11 +46,14 @@
   "devDependencies": {
     "@types/node": "^18.11.12",
     "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
+    "supertest": "^6.3.3",
     "ts-prune": "^0.10.3",
     "typescript": "^4.8.4"
   }
