--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,43 @@
-name: TesteAula
+   
+     
 on:
   workflow_dispatch:
-  
-jobs: 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run a online script 
-        run: echo Hello, world!
-        
-        
-    deploy-dev:
-       runs-on: ubuntu-latest
-       enviroment:
-       - name: dev
-         url: 'jane.com'
-       needs: build
-       steps:
-        - name: Run a one -line script
-          run: echo Deploy Dev
-        
 
-    deploy-hmg:
-      runs-on: ubuntu-latest
-      enviroment:
-      - name: dev
-        url: 'jane.com'
-      needs: build
-      steps:
-      - name: Run a one -line script
-        run: echo Deploy Dev
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Run a online script 
+      run: echo Hello, world!
+    
+  deploy-dev:
+     runs-on: ubunt
+          name:dev
+             url:'jane.com'
+            needs:build
+     steps:
+            - name: Run a one -line script
+              run: echo Deploy Dev
+ 
+  deploy-hmg:
+    runs-on: ubuntu-latest
+ 
+     name:dev
+        url:'jane.com'
+        needs:build
+    steps:
+         - name: Run a one -line script
+           run: echo Deploy Dev
         
-        
-      
-      deploy-prod:
-       runs-on: ubuntu-latest
-       enviroment:
-       - name: dev
-         url: 'jane.com'
-       needs: build
-       steps:
-       - name: Run a one -line script
-         run: echo Deploy Dev
-        
+  deploy-prod:
+    runs-on: ubuntu-latest
+    
+          name:dev
+           url:'jane.com'
+          needs:build
+    steps:
+          - name: Run a one -line script
+            run: echo Deploy Dev          
